# libpressioComparison

./: .gitignore  README.md  basic.cc  compare_csv.sh  comparison_ratio.csv  comparison_time.csv  run_pressio_all.sh  summary.csv  tee  test.sqlite
mydevenv/: spack.yaml
predict-install/include/libpressio_predict/: libpressio_predict_version.h
predict-install/lib64/cmake/LibPressioPredict/: LibPressioPredictConfig.cmake  LibPressioPredictConfigVersion.cmake  LibPressioPredictTargets-release.cmake  LibPressioPredictTargets.cmake
project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  evaluation.cc  results.csv
